// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picker should be able to call filter list 1`] = `
<form
  onSubmit={[Function]}
>
  <h3>
    Define desired playlist length and pick your music
  </h3>
  <Input
    label={
      Object {
        "basic": true,
        "content": "seconds",
      }
    }
    labelPosition="right"
    onChange={[Function]}
    placeholder="Enter desired playlist length"
    size="large"
    type="number"
    value={3600}
  />
  <br />
  <button
    className="picker-submit"
    type="submit"
  >
    Click here to generate the playlist from music you picked
  </button>
  <br />
  <small>
    Depending on the size of the set you pick, and the length of the playlist you set, the generated playlist may or may not include all the songs you picked.
  </small>
  <br />
  List duration 
  0
  <br />
  List size 
  0
  <br />
  <Input
    onChange={[Function]}
    placeholder="Search"
    type="search"
  />
  <div
    className="picker-container"
  >
    <ItemGroup />
  </div>
</form>
`;

exports[`Picker should be able to call onSubmit function and return a list of selected songs 1`] = `
<form
  onSubmit={[Function]}
>
  <h3>
    Define desired playlist length and pick your music
  </h3>
  <Input
    label={
      Object {
        "basic": true,
        "content": "seconds",
      }
    }
    labelPosition="right"
    onChange={[Function]}
    placeholder="Enter desired playlist length"
    size="large"
    type="number"
    value={3600}
  />
  <br />
  <button
    className="picker-submit"
    type="submit"
  >
    Click here to generate the playlist from music you picked
  </button>
  <br />
  <small>
    Depending on the size of the set you pick, and the length of the playlist you set, the generated playlist may or may not include all the songs you picked.
  </small>
  <br />
  List duration 
  60
  <br />
  List size 
  1
  <br />
  <Input
    onChange={[Function]}
    placeholder="Search"
    type="search"
  />
  <div
    className="picker-container"
  >
    <ItemGroup>
      <PickerItem
        item={
          Object {
            "id": "1",
            "seconds": 60,
            "title": "test",
          }
        }
        key="1"
        onClick={[Function]}
      />
      <PickerItem
        item={
          Object {
            "id": "2",
            "seconds": 60,
            "title": "test 2",
          }
        }
        key="2"
        onClick={[Function]}
      />
    </ItemGroup>
  </div>
</form>
`;

exports[`Picker should be able to call onSubmit function and return an empty list because selection was removed on the second click 1`] = `
<form
  onSubmit={[Function]}
>
  <h3>
    Define desired playlist length and pick your music
  </h3>
  <Input
    label={
      Object {
        "basic": true,
        "content": "seconds",
      }
    }
    labelPosition="right"
    onChange={[Function]}
    placeholder="Enter desired playlist length"
    size="large"
    type="number"
    value={3600}
  />
  <br />
  <button
    className="picker-submit"
    type="submit"
  >
    Click here to generate the playlist from music you picked
  </button>
  <br />
  <small>
    Depending on the size of the set you pick, and the length of the playlist you set, the generated playlist may or may not include all the songs you picked.
  </small>
  <br />
  List duration 
  0
  <br />
  List size 
  0
  <br />
  <Input
    onChange={[Function]}
    placeholder="Search"
    type="search"
  />
  <div
    className="picker-container"
  >
    <ItemGroup>
      <PickerItem
        item={
          Object {
            "id": "1",
            "seconds": 60,
            "title": "test",
          }
        }
        key="1"
        onClick={[Function]}
      />
      <PickerItem
        item={
          Object {
            "id": "2",
            "seconds": 60,
            "title": "test 2",
          }
        }
        key="2"
        onClick={[Function]}
      />
    </ItemGroup>
  </div>
</form>
`;

exports[`Picker should render 1`] = `
<form
  onSubmit={[Function]}
>
  <h3>
    Define desired playlist length and pick your music
  </h3>
  <div
    className="ui large right labeled input"
  >
    <input
      onChange={[Function]}
      placeholder="Enter desired playlist length"
      type="number"
      value={3600}
    />
    <div
      className="ui basic label label"
      onClick={[Function]}
    >
      seconds
    </div>
  </div>
  <br />
  <button
    className="picker-submit"
    type="submit"
  >
    Click here to generate the playlist from music you picked
  </button>
  <br />
  <small>
    Depending on the size of the set you pick, and the length of the playlist you set, the generated playlist may or may not include all the songs you picked.
  </small>
  <br />
  List duration 
  0
  <br />
  List size 
  0
  <br />
  <div
    className="ui input"
  >
    <input
      onChange={[Function]}
      placeholder="Search"
      type="search"
    />
  </div>
  <div
    className="picker-container"
  >
    <div
      className="ui items"
    >
      <a
        className="item"
        onClick={[Function]}
      >
        <div
          className="image"
        >
          <img
            src="https://i.ytimg.com/vi/1/hqdefault.jpg"
          />
        </div>
        <div
          className="content"
        >
          <div
            className="header"
          >
            test
          </div>
          <div
            className="meta"
          >
            1 minute
             
            
          </div>
        </div>
      </a>
      <a
        className="item"
        onClick={[Function]}
      >
        <div
          className="image"
        >
          <img
            src="https://i.ytimg.com/vi/2/hqdefault.jpg"
          />
        </div>
        <div
          className="content"
        >
          <div
            className="header"
          >
            test 2
          </div>
          <div
            className="meta"
          >
            1 minute
             
            
          </div>
        </div>
      </a>
    </div>
  </div>
</form>
`;
